# boost.SIMD-testing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/fma/: CMakeLists.txt  README.md  scalar_fma.cpp  simd_fma.cpp
src/sum/: CMakeLists.txt  README.md  scalar_sum.cpp  simd_sum.cpp
